Build: alova 설치

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "alova": "^2.21.1",
     "isbot": "^4.1.0",
     "preline": "^2.3.0",
     "prettier": "^3.2.5",
